Sunday am edits

--- a/CMS_Imaging.ipynb
+++ b/CMS_Imaging.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -381,7 +381,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe src='myFile1.html' width=1000 height=1000>\n"
+       "<iframe src='myFile1.html' width=1000 height=1000>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -465,7 +465,7 @@
     {
      "data": {
       "text/html": [
-       "<center><video width=\"1000\"  controls> <source src=\"FWI_Zubov_Horz.mov\"> </video> </center>\n"
+       "<center><video width=\"1000\"  controls> <source src=\"FWI_Zubov_Horz.mov\"> </video> </center>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -491,6 +491,32 @@
     "## New sensing mode: DAS (Hardeman-Voys)\n",
     "\n",
     "<center><img src=\"DAS_Newell.png\" width=\"1000\"  /></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<center><img src=\"DASshot.png\" width=\"1000\"  /></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Various approaches to new sensors\n",
+    "- DSP to make it look like geophone data\n",
+    "- Insert into processing flow *as is*\n",
+    "- New math'cal models to match new sensors\n",
+    "- Dump into machine learning"
    ]
   },
   {
@@ -537,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   },
   "livereveal": {
    "autolaunch": true,
